# casino-tracker

./: .gitignore  CLAUDE.md  generate-icons.sh  index.html  package-lock.json  package.json
src/: App.jsx  db.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: NetProfitChart.jsx  SpendingByCategory.jsx  SpendingOverTime.jsx  TransactionForm.jsx  TransactionList.jsx
src/hooks/: useTransactions.js
